index.html was updated - button name changed and script.js was implemented with a dog sound triggered on button click

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container-fluid">'
         <div class="row">
-            <button type="button">Play</button>
+            <button type="button">Wow wow</button>
         </div>
     </div>
     <script src="js/script.js">
