--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <div class="container-fluid">'
         <div class="row">
-            <button type="button">Wow wow</button>
+            <div class="animal lion">Lion</div>
+            <div class="animal cougar">Cougar</div>
+            <div class="animal dog">Dog</div>
         </div>
     </div>
     <script src="js/script.js">
