code inside script.js was made shorter and index.html was updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="animal lion">Lion</div>
             <div class="animal cougar">Cougar</div>
-            <div class="animal dog">Dog</div>
+            <div class="animal bark">Bark</div>
         </div>
     </div>
     <script src="js/script.js">
